# desktopctl

./: .gitignore  AGENTS.md  CLAUDE.md  CLI.md  LICENSE.txt  README.md
src/desktop/cli/: Cargo.toml
src/desktop/cli/src/: main.rs  output.rs  parse.rs  tests.rs  transport.rs  usage.rs
src/desktop/cli/tests/: smoke.rs
src/desktop/core/: Cargo.toml
src/desktop/core/src/: error.rs  ipc.rs  lib.rs  protocol.rs
src/desktop/core/src/automation/: macos.rs  mod.rs  stub.rs  windows.rs
src/desktop/core/src/protocol/: command.rs  observe.rs  response.rs  types.rs
src/desktop/daemon/: Cargo.toml
src/desktop/daemon/examples/: render_settings_regions.rs
src/desktop/daemon/packaging/macos/: Info.plist
src/desktop/daemon/src/: about.rs  app_policy.rs  clipboard.rs  daemon.rs  main.rs  overlay.rs  permissions.rs  permissions_dialog.rs  recording.rs  replay.rs  request_store.rs  trace.rs  window_refs.rs  window_target.rs
src/desktop/daemon/src/app_runtime/: about.rs  about_windows.rs  app_policy_dialog.rs  app_policy_dialog_windows.rs  macos.rs  mod.rs  permissions_dialog.rs  permissions_dialog_windows.rs  unsupported.rs  windows.rs
src/desktop/daemon/src/daemon/: background_verification.rs  click_ops.rs  geometry.rs  guards.rs  mod.rs  observe_pipeline.rs  platform_runtime.rs  query_ops.rs  screen_image.rs  settings_flow.rs  text_match.rs  window_context.rs  window_target.rs
src/desktop/daemon/src/daemon/commands/: app.rs  input.rs  misc.rs  mod.rs  overlay.rs  pointer.rs  screen.rs  window.rs
src/desktop/daemon/src/daemon/observe_pipeline/: token_collect.rs  token_delta.rs
src/desktop/daemon/src/overlay/: mod.rs  windows.rs
src/desktop/daemon/src/platform/: apps.rs  ax.rs  capture.rs  mod.rs  windowing.rs
src/desktop/daemon/src/platform/apps/: macos.rs  mod.rs  unsupported.rs  windows.rs
src/desktop/daemon/src/platform/ax/: macos.rs  mod.rs  unsupported.rs  windows.rs
src/desktop/daemon/src/platform/permissions/: macos.rs  unsupported.rs  windows.rs
src/desktop/daemon/src/platform/windowing/: macos.rs  mod.rs  unsupported.rs  windows.rs
src/desktop/daemon/src/request_store/: mod.rs  model.rs  search.rs  service.rs
src/desktop/daemon/src/vision/: CONTROL_DETECTION.md  ax.rs  ax_merge.rs  background_fill_detector.rs  capture.rs  coord_map.rs  debug.rs  diff.rs  element_normalizer.rs  metal_pipeline.rs  mod.rs  ocr.rs  pipeline.rs  regions.rs  sobel_box_detector.rs  state.rs  text_group.rs  tokenize_boxes.rs  types.rs
src/desktop/daemon/src/vision/capture/: macos.rs
src/desktop/daemon/tests/: fixtures_contract.rs  golden_labels.rs  settings_plus_fixtures.rs  settings_screenshot_labels.rs  text_elements.rs  text_field_button_labels.rs  tokenize_box_labels.rs  tokenize_manual_notes_labels.rs
src/desktop/daemon/tests/fixtures/golden/: controls.json
src/desktop/daemon/tests/fixtures/settings-screenshots/: dark-1-item-selected.window.json  dark-1-item.window.json  dark-3-items.window.json  dark-abstract-overlap.window.json  dark-city_top.window.json  dark-dark-center.window.json  dark-dark-far-left.window.json  dark-dark-left.window.json  dark-dark-right.window.json  dark-forest-center.window.json  dark-forest-left.window.json  dark-forest-overlap.window.json  dark-neon_grass.window.json  light-1-item-selected.window.json  light-1-item.window.json  light-3-items.window.json  light-abstract-overlap.window.json  light-city_top.window.json  light-dark-center.window.json  light-dark-left.window.json  light-forest-center.window.json  light-forest-left.window.json  light-forest-overlap.window.json  light-forest-right.window.json  light-light-center.window.json  light-light-left.window.json  light-neon_grass.window.json
src/desktop/daemon/tests/fixtures/snapshots/: calculator-01.json  finder-01.json  messages-01.json  notes-01.json  preview-01.json  safari-01.json  settings-01.json  (+3 more)
src/desktop/scripts/: README.md  gen_icns.swift  justfile  pyproject.toml  smoke-windows.ps1  web-research.md
src/desktop/scripts/dev/: ask_claude.sh  check_cli_reference.sh  generate_settings_window_data.py  render-settings-regions.sh  run_golden_tests.sh  run_grounding_dino_sweep.sh  run_macpaw_labelgen.sh  run_tokenize_build_mixed_corpus.sh  run_tokenize_dump_batch.sh  tokenize_ai_verify.py  tokenize_build_mixed_corpus.py  tokenize_ci_gate.sh  tokenize_label_corpus.py  tokenize_macpaw_labelgen.py  tokenize_model_bench.py  tokenize_slice12.txt
src/desktop/scripts/vm/: README.md  enable_permissions.sh  smoke.sh  test_notes_password_input.sh  tokenize_phase0.sh  tokenize_phase1_capture.sh
(+50 files in other folders)
