[package]
name = "desktopctl"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "desktopctl"
path = "src/bin/launcher.rs"

[[bin]]
name = "desktopctl-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["std"] }
desktop-core = { path = "../core" }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }
