[package]
name = "desktopctld"
version = "0.1.0"
edition = "2024"

[dependencies]
desktop-core = { path = "../core" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-graphics = "0.24"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-foundation = { version = "0.3", features = ["objc2"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDataProvider", "CGColorSpace", "objc2"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSError", "NSString", "NSURL"] }
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLTexture", "MTLResource", "MTLPixelFormat"] }
objc2-metal-performance-shaders = { version = "0.3", features = ["MPSCore", "MPSImageKernel", "MPSKernel"] }
objc2-screen-capture-kit = "0.3"
objc2-vision = { version = "0.3", features = ["VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "objc2-core-graphics"] }
tray-icon = "0.21"
