[package]
name = "desktopctld"
version = "0.1.0"
edition = "2024"

[dependencies]
desktop-core = { path = "../core" }
image = { version = "0.25", default-features = false, features = ["png"] }
interprocess = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
block2 = "0.6"
core-graphics = "0.24"
core-foundation = "0.10"
dispatch2 = "0.3"
metal = "0.31"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-foundation = { version = "0.3", features = ["objc2"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDataProvider", "CGColorSpace", "objc2"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSError", "NSString", "NSURL"] }
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLTexture", "MTLResource", "MTLPixelFormat"] }
objc2-metal-performance-shaders = { version = "0.3", features = ["MPSCore", "MPSImageKernel", "MPSKernel"] }
objc2-screen-capture-kit = "0.3"
objc2-vision = { version = "0.3", features = ["VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "objc2-core-graphics"] }
tray-icon = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
leptess = "0.14"
