[project]
name = "desktopctl-testdata"
version = "0.1.0"
description = "Python helpers for generating DesktopCtl vision test data."
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2.0",
  "opencv-python>=4.11.0",
]

[project.optional-dependencies]
grounding = [
  "accelerate>=1.10.0",
  "pillow>=11.3.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "transformers>=4.56.0",
]

[tool.uv]
package = false
